# vkdnn

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  ops.md  prototype.cpp  vulkan_dnn.h
TESTING/: const.comp  conv.shader_test  conv_test.py  matmul.cu  matmul.shader_test  norm.py  norm.shader_test  ssbo.txt  test.cpp  tmp.comp  view.h  vkrunner
base/: CMakeLists.txt  arithmetic.h  base.cpp  base.h  binary.h  cc.h  logical.h  reduction.h  scalar.h  transform.h  unary.h
blas/: CMakeLists.txt  blas.cpp  blas.h  matmul.comp  matmul.comp.spv
nn/: CMakeLists.txt  activation.h  convolution.h  fold.comp  linear.h  nn.cpp  nn.h  normalization.h  padding.h  pooling.h  reccurent.h  unfold.comp
runtime/: CMakeLists.txt  allocator.h  device.h  job.h  runtime.cpp  runtime.h  threads.h
tensor/: CMakeLists.txt  cc.h  copy.h  init.h  tensor.cpp  tensor.h  utils.h  view.h
trash/: const.comp  conv_test.py  conv_test2.py  core-ops.txt  matmul.cu  matmul_test.py  prim-ops.txt  ssbo.py  test.cuh  test.py  tmp.comp  vkrunner  welford.shader_test
